--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
+astroid==2.1.0
+certifi==2018.11.29
+chardet==3.0.4
+defusedxml==0.5.0
 Django==2.1.7
+django-allauth==0.38.0
+idna==2.8
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+oauthlib==3.0.1
+pylint==2.2.2
+python3-openid==3.1.0
 pytz==2018.9
+requests==2.21.0
+requests-oauthlib==1.2.0
+six==1.12.0
+typed-ast==1.3.1
+urllib3==1.24.1
+wrapt==1.11.1
